--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,14 +1,51 @@
-<h1>Creat new event</h1>
-<form action="/new" method="POST">
-    <label for="name">Event Name</label>
-    <input type="text" name="name" id="name" placeholder="Event Name">
-    <label for="description">description</label>
-    <textarea name="description" id="description" cols="30" rows="10"></textarea>
-    <label for="start-time">Start Time</label>
-    <input type="datetime-local" name="start-time" id="start-time">
-    <label for="end-time">End Time</label>
-    <input type="datetime-local" name="end-time" id="end-time">
-    <input type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+<html lang="en">
 
-<a href="/">All Events</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Creat new event</h1>
+    <form action="/new" method="POST">
+        <label for="name">Event Name</label>
+        <input type="text" name="name" id="name" placeholder="Event Name">
+        <label for="description">description</label>
+        <textarea name="description" id="description" cols="30" rows="10"></textarea>
+        <div class="start-data">start time:
+            <div class="start date" id="start-date">
+                <input type="number" name="start.date" id="start-date" min="1" max="31" placeholder="date">
+                <input type="number" name="start.month" id="start-month" min="1" max="12" placeholder="month">
+                <input type="number" name="start.year" id="start-year" min="1900" placeholder="year">
+
+
+            </div>
+            <div class="start time" id="start-time">
+                <input type="number" name="start.hour" id="start-hour" min="0" max="23" placeholder="hour">
+                <input type="number" name="start.minute" id="start-minute" min="0" max="59" placeholder="minute">
+            </div>
+        </div>
+
+        <div class="end-data">
+            end time:
+            <div class="end date" id="end-date">
+                <input type="number" name="end.date" id="end-date" min="1" max="31" placeholder="date">
+                <input type="number" name="end.month" id="end-month" min="1" max="12" placeholder="month">
+                <input type="number" name="end.year" id="end-year" min="1900" placeholder="year">
+
+
+            </div>
+            <div class="end time" id="end-time">
+                <input type="number" name="end.hour" id="end-hour" min="0" max="23" placeholder="hour">
+                <input type="number" name="end.minute" id="end-minute" min="0" max="59" placeholder="minute">
+            </div>
+        </div>
+        <input type="submit" value="Submit">
+    </form>
+
+    <a href="/">All Events</a>
+</body>
+
+</html>
