--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,13 +1,26 @@
-<h1>All Events</h1>
-<% if(Object.keys(events).length===0){ %>
-    Sorry, no events
-    <% } else { %>
-        <% for( let event of events){ %>
-            <div>
-                <a href="<%= event._id %>">
-                    <%= event.name %>
-                </a>
-            </div>
-            <% } %>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>All Events</h1>
+    <% if(Object.keys(events).length===0){ %>
+        Sorry, no events
+        <% } else { %>
+            <% for( let event of events){ %>
+                <div>
+                    <a href="<%= event._id %>">
+                        <%= event.name %>
+                    </a>
+                </div>
                 <% } %>
-                    <a href="/new">New event</a>
+                    <% } %>
+                        <a href="/new">New event</a>
+</body>
+
+</html>
