working on the calendar view

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -56,8 +56,7 @@
         <input type="submit" value="Submit">
     </form>
 
-    <a href="/">All Events</a>
-    <form action="/<%= event._id %>/edit" method="post"></form>
+    <a href="/">All Events</a><a href="/<%= event._id %>">Back to event</a>
 
 
 </body>
