--- a/views/new.ejs
+++ b/views/new.ejs
@@ -16,30 +16,40 @@
         <textarea name="description" id="description" cols="30" rows="10"></textarea>
         <div class="start-data">start time:
             <div class="start date" id="start-date">
-                <input type="number" name="start.date" id="start-date" min="1" max="31" placeholder="date">
-                <input type="number" name="start.month" id="start-month" min="1" max="12" placeholder="month">
-                <input type="number" name="start.year" id="start-year" min="1900" placeholder="year">
+                <input type="number" name="start.date" id="start-date" min="1" max="31" placeholder="date"
+                    value="<%= dateNow.getDate() %>">
+                <input type="number" name="start.month" id="start-month" min="1" max="12" placeholder="month"
+                    value="<%= dateNow.getMonth() +1 %>">
+                <input type="number" name="start.year" id="start-year" min="1900" placeholder="year"
+                    value="<%= dateNow.getFullYear() %>">
 
 
             </div>
             <div class="start time" id="start-time">
-                <input type="number" name="start.hour" id="start-hour" min="0" max="23" placeholder="hour">
-                <input type="number" name="start.minute" id="start-minute" min="0" max="59" placeholder="minute">
+                <input type="number" name="start.hour" id="start-hour" min="0" max="23" placeholder="hour"
+                    value="<%= dateNow.getHours() %>">
+                <input type="number" name="start.minute" id="start-minute" min="0" max="59" placeholder="minute"
+                    value="<%= dateNow.getMinutes() %>">
             </div>
         </div>
 
         <div class="end-data">
             end time:
             <div class="end date" id="end-date">
-                <input type="number" name="end.date" id="end-date" min="1" max="31" placeholder="date">
-                <input type="number" name="end.month" id="end-month" min="1" max="12" placeholder="month">
-                <input type="number" name="end.year" id="end-year" min="1900" placeholder="year">
+                <input type="number" name="end.date" id="end-date" min="1" max="31" placeholder="date"
+                    value="<%= dateNow.getDate() %>">
+                <input type="number" name="end.month" id="end-month" min="1" max="12" placeholder="month"
+                    value="<%= dateNow.getMonth() +1%>">
+                <input type="number" name="end.year" id="end-year" min="1900" placeholder="year"
+                    value="<%= dateNow.getFullYear() %>">
 
 
             </div>
             <div class="end time" id="end-time">
-                <input type="number" name="end.hour" id="end-hour" min="0" max="23" placeholder="hour">
-                <input type="number" name="end.minute" id="end-minute" min="0" max="59" placeholder="minute">
+                <input type="number" name="end.hour" id="end-hour" min="0" max="23" placeholder="hour"
+                    value="<%= dateNow.getHours()+1 %>">
+                <input type="number" name="end.minute" id="end-minute" min="0" max="59" placeholder="minute"
+                    value="<%= dateNow.getMinutes() %>">
             </div>
         </div>
         <input type="submit" value="Submit">
