--- a/views/calendarView.ejs
+++ b/views/calendarView.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Calendar View</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -12,16 +12,16 @@
 <body>
     <main class="container">
         <div class="row">
-            Month
+            <input type="month" name="month" id="month-picker">
         </div>
         <div class="row">
-            <div class="day col">Monday</div>
-            <div class="day col">Tuesday</div>
-            <div class="day col">Wednesday</div>
-            <div class="day col">Thursday</div>
-            <div class="day col">Friday</div>
-            <div class="day col">Saturday</div>
-            <div class="day col">Sunday</div>
+            <div class="day-header col">Monday</div>
+            <div class="day-header col">Tuesday</div>
+            <div class="day-header col">Wednesday</div>
+            <div class="day-header col">Thursday</div>
+            <div class="day-header col">Friday</div>
+            <div class="day-header col">Saturday</div>
+            <div class="day-header col">Sunday</div>
         </div>
 
         <% let count=1 %>
@@ -29,9 +29,9 @@
             <% for( let i=1; i<=7; i++) { %>
                 <div class="row">
                     <% for( let j=1; j<=7; j++) { %>
-                        <div class="col">
-                            <%= count %>
-                                <% count++ %>
+                        <div class="col day">
+                            <!-- <%= count %>
+                                <% count++ %> -->
                         </div>
 
                         <% } %>
