--- a/views/calendarView.ejs
+++ b/views/calendarView.ejs
@@ -38,6 +38,9 @@
                 </div>
 
                 <% } %>
+                    <div class="row">
+                        <a href="/">All events</a><a href="/calendar">calendar view</a>
+                    </div>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
