--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -18,19 +18,19 @@
         <div class="start-data">start time:
             <div class="start date" id="start-date">
                 <input type="number" name="start.date" id="start-date" min="1" max="31" placeholder="date"
-                    value="<%= event.start.date %>">
+                    value="<%= event.startTime.getDate() %>">
                 <input type="number" name="start.month" id="start-month" min="1" max="12" placeholder="month"
-                    value="<%= event.start.month %>">
+                    value="<%= event.startTime.getMonth() +1%>">
                 <input type="number" name="start.year" id="start-year" min="1900" placeholder="year"
-                    value="<%= event.start.year %>">
+                    value="<%= event.startTime.getFullYear() %>">
 
 
             </div>
             <div class="start time" id="start-time">
                 <input type="number" name="start.hour" id="start-hour" min="0" max="23" placeholder="hour"
-                    value="<%= event.start.hour %>">
+                    value="<%= event.startTime.getHours() %>">
                 <input type="number" name="start.minute" id="start-minute" min="0" max="59" placeholder="minute"
-                    value="<%= event.start.minute %>">
+                    value="<%= event.startTime.getMinutes() %>">
             </div>
         </div>
 
@@ -38,19 +38,19 @@
             end time:
             <div class="end date" id="end-date">
                 <input type="number" name="end.date" id="end-date" min="1" max="31" placeholder="date"
-                    value="<%= event.end.date %>">
+                    value="<%= event.endTime.getDate() %>">
                 <input type="number" name="end.month" id="end-month" min="1" max="12" placeholder="month"
-                    value="<%= event.end.month %>">
+                    value="<%= event.endTime.getMonth() + 1 %>">
                 <input type="number" name="end.year" id="end-year" min="1900" placeholder="year"
-                    value="<%= event.end.year %>">
+                    value="<%= event.endTime.getFullYear() %>">
 
 
             </div>
             <div class="end time" id="end-time">
                 <input type="number" name="end.hour" id="end-hour" min="0" max="23" placeholder="hour"
-                    value="<%= event.end.hour %>">
+                    value="<%= event.endTime.getHours() %>">
                 <input type="number" name="end.minute" id="end-minute" min="0" max="59" placeholder="minute"
-                    value="<%= event.end.minute %>">
+                    value="<%= event.endTime.getMinutes() %>">
             </div>
         </div>
         <input type="submit" value="Submit">
