--- a/views/show.ejs
+++ b/views/show.ejs
@@ -21,6 +21,9 @@
                 <% } %>
                     <% } %>
                         <a href="/new">New event</a>
+                        <br>
+                        <a href="/calendar">calendar</a>
+                        <a href="/day/day">day view</a>
 </body>
 
 </html>
