--- a/views/viewIndividual.ejs
+++ b/views/viewIndividual.ejs
@@ -13,13 +13,10 @@
     <h1>
         <%= event.name %>
     </h1>
-    <div>Start time: <%= `${event.start.hour}:${event.start.minute}` %>
-            <div>Start Date: <%= `${event.start.date}/${event.start.month}/${event.start.year}` %>
-            </div>
+    <div>Start time: <%= `${event.startTime}` %>
     </div>
-    <div>End time: <%= `${event.end.hour}:${event.end.minute}` %>
-            <div>Start Date: <%= `${event.end.date}/${event.end.month}/${event.end.year}` %>
-            </div>
+    </div>
+    <div>End time: <%= `${event.endTime}` %>
     </div>
     <div>
         <div>Description</div>
