--- a/views/calendarView.ejs
+++ b/views/calendarView.ejs
@@ -30,8 +30,7 @@
                 <div class="row">
                     <% for( let j=1; j<=7; j++) { %>
                         <div class="col day">
-                            <!-- <%= count %>
-                                <% count++ %> -->
+                            <a href="" class="day-anchor"></a>
                         </div>
 
                         <% } %>
@@ -46,7 +45,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="js/calendarView.js"></script>
+    <script src="/js/calendarView.js"></script>
 </body>
 
 </html>
