--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
+<% layout('templates/boilerplate') %>
     <h1>Creat new event</h1>
     <form action="/new" method="POST">
         <label for="name">Event Name</label>
@@ -56,6 +47,3 @@
     </form>
 
     <a href="/">All Events</a>
-</body>
-
-</html>
