--- a/views/dayView.ejs
+++ b/views/dayView.ejs
@@ -1,39 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day View</title>
-    <link rel="stylesheet" href="/css/dayView.css">
-</head>
-
-<body>
+<% layout('templates/boilerplate') %>
     <h1>Day View</h1>
     <a href="/">All events</a><a href="/calendar">calendar view</a>
     <div class="container">
-        <table>
-            <tbody>
-                <% for(let i=0; i< 24; i++){ %>
-                    <tr class="hour<%= i  %>">
-                        <td>
-                            <%= i %>:00
-                        </td>
-                        <% for(let event of eventsOnDay){ %>
-                            <% if(event.startTime.getHours()===i){ %>
-                                <td>
-                                    <a href="/<%= event._id %>">
-                                        <%= event.name %>
-                                    </a>
 
-                                </td>
-                                <% } %>
-                                    <% } %>
-                    </tr>
-                    <% } %>
-            </tbody>
-        </table>
+        <% for(let i=0; i< 24; i++){ %>
+            <div class="hour<%= i  %> row">
+                <div class="col-1">
+                    <%= i %>:00
+                </div>
+
+                <% for(let event of eventsOnDay){ %>
+                    <% if(event.startTime.getHours()===i){ %>
+                        <div class="col border">
+                            <a href="/<%= event._id %>">
+                                <%= event.name %>
+                            </a>
+
+                        </div>
+                        <% } %>
+                            <% } %>
+            </div>
+            <% } %>
     </div>
-</body>
-
-</html>
