--- a/views/viewIndividual.ejs
+++ b/views/viewIndividual.ejs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%= event.name %>
-    </title>
-</head>
-
-<body>
+<% layout('templates/boilerplate') %>
     <h1>
         <%= event.name %>
     </h1>
@@ -27,6 +16,3 @@
     <form action="/<%= event._id %>?_method=DELETE" method="post">
         <button type="submit">Delete</button>
     </form>
-</body>
-
-</html>
