--- a/views/templates/boilerplate.ejs
+++ b/views/templates/boilerplate.ejs
@@ -19,6 +19,9 @@
 
 <body>
     <%- body -%>
+        <% for(let script of scripts){ %>
+            <script src="<%= script %>"></script>
+            <% } %>
 </body>
 
 </html>
