--- a/views/templates/boilerplate.ejs
+++ b/views/templates/boilerplate.ejs
@@ -12,13 +12,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="/js/boilerplate.js"></script>
     <% for(let style of styles){ %>
         <link rel="stylesheet" href="<%= style %>">
         <% } %>
 </head>
 
-<body>
+<body class="container">
     <%- body -%>
+        <div class="row">
+            <% let today=new Date() %>
+                <a href="/">All events</a><a
+                    href="/month/<%= `${today.getFullYear()}-${today.getMonth()+1}` %>">calendar view</a>
+
+                <a href="/day/<%= `${today.getFullYear()}-${today.getMonth()+1}-${today.getDate()}` %>">day
+                    view</a>
+        </div>
         <% for(let script of scripts){ %>
             <script src="<%= script %>"></script>
             <% } %>
