--- a/views/templates/boilerplate.ejs
+++ b/views/templates/boilerplate.ejs
@@ -9,10 +9,7 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="/js/boilerplate.js"></script>
+
     <% for(let style of styles){ %>
         <link rel="stylesheet" href="<%= style %>">
         <% } %>
@@ -28,8 +25,12 @@
                 <a href="/day/<%= `${today.getFullYear()}-${today.getMonth()+1}-${today.getDate()}` %>">day
                     view</a>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="/js/boilerplate.js"></script>
         <% for(let script of scripts){ %>
-            <script src="<%= script %>"></script>
+            <script type="module" src="<%= script %>"></script>
             <% } %>
 </body>
 
